force-app/main/default/objects/Grant__c/Grant__c.object-meta.xml
<CustomObject>
    <label>Grant</label>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>