force-app/main/default/objects/Grant__c/fields/Grant_Product__c.field-meta.xml
<CustomField>
    <fullName>Grant_Product__c</fullName>
    <label>Grant Product</label>
    <referenceTo>Grant_Product__c</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Granst</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>